project-12/target/debug/build/smartstring-ab8b0606e36aaf1f/stderr
error[E0433]: failed to resolve: use of undeclared crate or module `alloc`
 --> <anon>:1:18
  |
1 | pub trait Probe: alloc::alloc::Allocator + Sized {}
  |                  ^^^^^ use of undeclared crate or module `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
